--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,1 +1,25 @@
 @import '~bulma/bulma';
+
+.icon {
+  width: 100px;
+  height: 100px;
+}
+
+.booky {
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.literary {
+  border: 2px solid black;
+  margin-bottom: 30px;
+  padding: 30px;
+  border-radius: 10px;
+    p {
+      margin-bottom: 10px;
+    }
+    h4 {
+      margin-bottom: 15px;
+      font-weight: bold;
+    }
+}
