--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,13 +1,39 @@
 @import '~bulma/bulma';
 
 .icon {
-  width: 100px;
-  height: 100px;
+  width: 300px;
+  height: 200px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.showpage {
+  width: 600px;
+  height: 400px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 10px;
 }
 
 .booky {
   text-transform: uppercase;
   text-align: center;
+}
+
+.byline {
+  text-align: center;
+  margin-top: -20px;
+
+}
+
+.synopsis {
+  font-style: italic;
+  margin-top: 50px;
+  margin-bottom: 50px;
+
 }
 
 .literary {
@@ -22,4 +48,10 @@
       margin-bottom: 15px;
       font-weight: bold;
     }
+}
+
+.fail {
+  text-align: center;
+  display: none;
+  z-index: 3;
 }
