--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -46,6 +46,12 @@ html{
   border-radius: 10px;
 }
 
+.credit {
+  padding-top: 50px;
+  text-align: center;
+  width: 100%;
+}
+
 
 //navbar
 
@@ -153,6 +159,7 @@ h1,h2,h3,p{
   background-size: cover;
   background-repeat: no-repeat;
   height: 250px;
+  margin-top: 50px;
   border: black solid 5px;
   border-radius: 10px;
   &:hover {
