--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -159,6 +159,8 @@ h1,h2,h3,p{
   background-size: cover;
   background-repeat: no-repeat;
   height: 250px;
+  width: 250px;
+  margin: 0 auto;
   margin-top: 50px;
   border: black solid 5px;
   border-radius: 10px;
